--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Adele Decore &amp; Design</title>
     </head>
     <body>
-        <header role="banner">
+        <header role="banner" class="fixed-top">
             <img id="logo-main" src="img/logo2.png" width="200" alt="adele decore and design logo img">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!-- <a class="navbar-brand" href="#">Adele Design &amp; Design</a> -->
@@ -30,6 +30,13 @@
             </div>
         </nav>
         </header>
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Fluid jumbotron</h1>
+              <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
+        </div>
 
         <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
