--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header role="banner" class="fixed-top">
             <img id="logo-main" src="img/logo2.png" width="200" alt="adele decore and design logo img">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <!-- <a class="navbar-brand" href="#">Adele Design &amp; Design</a> -->
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,8 +33,27 @@
 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Fluid jumbotron</h1>
-              <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+              <div class="row text-center">
+
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="img/card-img1.jpg" alt="Design">
+                    </div>
+                </div>
+                    
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="img/card-img2.jpg" alt="Development">
+                    </div>
+                </div>
+                    
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="img/card-img3.jpg" alt="Analytics">
+                    </div>
+                </div>
+
+               </div>
             </div>
         </div>
 
