--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
         <header role="banner" class="fixed-top">
             <img id="logo-main" src="img/logo2.png" width="200" alt="adele decore and design logo img">
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <!-- <a class="navbar-brand" href="#">Adele Design &amp; Design</a> -->
-            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
             <div class="nav-width collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">About</a>
-                <a class="nav-item nav-link" href="#">Services</a>
-                <a class="nav-item nav-link" href="#">Gallery</a>
-                <a class="nav-item nav-link" href="#">Contact Us</a>
-                <a class="nav-item nav-link" href="#">Testimonials</a>
+                <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation"href="#">Home <span class="sr-only">(current)</span></a>
+                <a tabindex="2" class="nav-item nav-link" href="#">About</a>
+                <a tabindex="3" class="nav-item nav-link" href="#">Services</a>
+                <a tabindex="4" class="nav-item nav-link" href="#">Gallery</a>
+                <a tabindex="5" class="nav-item nav-link" href="#">Contact Us</a>
+                <a tabindex="6" class="nav-item nav-link" href="#">Testimonials</a>
                 </div>
             </div>
         </nav>
@@ -56,6 +52,7 @@
                </div>
             </div>
         </div>
+        <!-- make card images NOT responsive so that they are always in a ROW position even when in mobile?? -->
 
         <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
