adjusted padding of each card so that there is less white space between each image

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <title>Adele Decore &amp; Design</title>
     </head>
     <body>
-        <header role="banner" class="fixed-top">
+        <nav role="banner" class="top-logo fixed-top">
             <img id="logo-main" src="img/logo2.png" width="200" alt="adele decore and design logo img">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+          <div class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="nav-width collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+              <div class="navbar-nav">
                 <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation"href="#">Home <span class="sr-only">(current)</span></a>
                 <a tabindex="2" class="nav-item nav-link" href="#">About</a>
                 <a tabindex="3" class="nav-item nav-link" href="#">Services</a>
                 <a tabindex="4" class="nav-item nav-link" href="#">Gallery</a>
                 <a tabindex="5" class="nav-item nav-link" href="#">Contact Us</a>
                 <a tabindex="6" class="nav-item nav-link" href="#">Testimonials</a>
-                </div>
+              </div>
             </div>
+          </div>
         </nav>
-        </header>
 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
