added about section and linked home and about pages to navbar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <div class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="nav-width collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation"href="#">Home <span class="sr-only">(current)</span></a>
-                <a tabindex="2" class="nav-item nav-link" href="#">About</a>
+                <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation"href="#home">Home <span class="sr-only">(current)</span></a>
+                <a tabindex="2" class="nav-item nav-link" href="#about">About</a>
                 <a tabindex="3" class="nav-item nav-link" href="#">Services</a>
                 <a tabindex="4" class="nav-item nav-link" href="#">Gallery</a>
                 <a tabindex="5" class="nav-item nav-link" href="#">Contact Us</a>
@@ -27,7 +27,7 @@
           </div>
         </nav>
 
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid" title="Wedding Decore" id="home">
             <div class="container">
               <div class="row text-center">
 
@@ -52,6 +52,24 @@
                </div>
             </div>
         </div>
+
+        <section id="about" class="container">
+            <h2 class="display-3 text-center mt-5 mb-5">About</h2>
+            <div class="about-text text-center mb-5">
+                <p>Lorem ipsum dolor sit amet, sed ex affert tamquam omnesque, sed ut malorum signiferumque. 
+                    Per no consul ridens albucius. Eam legere habemus an, vis iusto vocent ad. No omnes praesent 
+                    ullamcorper vix, legere facete senserit sea ad. Mea bonorum deserunt at, vim quidam dignissim no.</p>
+
+                <p>Duo id oblique habemus, te duo minim eleifend. Esse modus mollis per an, vocent luptatum vel ne. 
+                    Minimum copiosae lobortis quo cu. Mutat luptatum postulant id vel, sit ea labore accusam noluisse. 
+                    Laoreet explicari est et, duo et dicam facilisis.</p>
+
+                <p>Has quidam putant melius an, erroribus consetetur in eam, no malorum nominati delicata sit. 
+                    Amet nostrum vim at, te mea alterum sadipscing. His recusabo sadipscing no, at insolens evertitur quo. 
+                    No elit euismod insolens nam, modus facilis inimicus qui ea, ne diam clita eum. 
+                    Forensibus democritum duo ad, cum id ferri brute menandri, nam ex equidem fierent.</p>
+            </div>
+        </section>
         <!-- make card images NOT responsive so that they are always in a ROW position even when in mobile?? -->
 
         <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
