--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a tabindex="2" class="nav-item nav-link" href="#about">About</a>
                 <a tabindex="3" class="nav-item nav-link" href="#services">Services</a>
                 <a tabindex="4" class="nav-item nav-link" href="#">Gallery</a>
-                <a tabindex="5" class="nav-item nav-link" href="#">Testimonials</a>
+                <a tabindex="5" class="nav-item nav-link" href="#testimonials">Testimonials</a>
                 <a tabindex="6" class="nav-item nav-link" href="#">Contact Us</a>
               </div>
             </div>
@@ -205,7 +205,7 @@
 
         <section id="testimonials" class="container">
             <h2 class="display-3 text-center mt-5 mb-5">T e s t i m o n i a l s</h2>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide justify-content-center" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -213,24 +213,24 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/table-decor.jpg" alt="First slide">
+                    <img class="d-block w-100" src="img/testimonials.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>...</h5>
-                        <p>...</p>
+                        <p>Violet was very easy to work with and made sure our wedding was absolutely beautiful!</p>
+                        <h5 class="text-right">- a very happy customer</h5>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img class="d-block w-100" src="img/floral.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="img/testimonials.jpg" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>...</h5>
-                        <p>...</p>
+                        <p>Violet was very easy to work with and made sure our wedding was absolutely beautiful!</p>
+                        <h5 class="text-right">- a very happy customer</h5>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img class="d-block w-100" src="img/props.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="img/testimonials.jpg" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>...</h5>
-                        <p>...</p>
+                        <p>Violet was very easy to work with and made sure our wedding was absolutely beautiful!</p>
+                        <h5 class="text-right">- a very happy customer</h5>
                     </div>
                     </div>
                 </div>
