--- a/index.html
+++ b/index.html
@@ -245,7 +245,12 @@
             </div>
         </section>
 
-        <section id="contact-us" class="container"></section>
+        <section class="container-fluid text-center py-4 mt-4" id="contact">
+            <h2 class="display-4 pb-4 my-4">Contact Us Today</h2>
+            <p class="lead pb-3">Send us a message and we will get back to 
+            you as soon as possible.</p>
+            <a href="#" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
+        </section>
 
         <footer class="py-3 bg-white">
             <div class="container">
