--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a tabindex="3" class="nav-item nav-link" href="#services">Services</a>
                 <a tabindex="4" class="nav-item nav-link" href="#">Gallery</a>
                 <a tabindex="5" class="nav-item nav-link" href="#testimonials">Testimonials</a>
-                <a tabindex="6" class="nav-item nav-link" href="#">Contact Us</a>
+                <a tabindex="6" class="nav-item nav-link" href="#contact">Contact Us</a>
               </div>
             </div>
           </div>
@@ -213,21 +213,18 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/testimonials.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <p>Violet was very easy to work with and made sure our wedding was absolutely beautiful!</p>
                         <h5 class="text-right">- a very happy customer</h5>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img class="d-block w-100" src="img/testimonials.jpg" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                         <p>Violet was very easy to work with and made sure our wedding was absolutely beautiful!</p>
                         <h5 class="text-right">- a very happy customer</h5>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img class="d-block w-100" src="img/testimonials.jpg" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <p>Violet was very easy to work with and made sure our wedding was absolutely beautiful!</p>
                         <h5 class="text-right">- a very happy customer</h5>
