--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div> -->
         </section>
 
-        <section id="testimonials" class="container">
+        <!-- <section id="testimonials" class="container">
             <h2 class="display-3 text-center mt-5 mb-5">T e s t i m o n i a l s</h2>
             <div id="carouselExampleIndicators" class="carousel slide justify-content-center" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -239,6 +239,47 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+            </div>
+        </section> -->
+
+        <section id="testimonials" class="container">
+            <h2 class="display-3 text-center mt-5 mb-5">T e s t i m o n i a l s</h2>
+            <div class="testimonials py-5 text-white px-1 px-md-5 margin-top-xl">
+            <img src="https://raw.githubusercontent.com/solodev/testimonial-slider-fullwidth/master/solodev-logo-stacked.png" class="icon-overlay" />
+            <div class="container">
+            <div class="row">
+            <div class="col-sm-12">
+                <h2 class="pt-2 text-center font-weight-bold">Our Customers Are Seeing Big Results</h2>
+        
+                <div class="carousel-controls testimonial-carousel-controls">
+                <div class="control d-flex align-items-center justify-content-center prev mt-3"><i class="fa fa-chevron-left"></i></div>
+                <div class="control d-flex align-items-center justify-content-center next mt-3"><i class="fa fa-chevron-right"></i></div>
+        
+                <div class="testimonial-carousel">
+                    <div class="h5 font-weight-normal one-slide mx-auto">
+                    <div class="testimonial w-100 px-3 text-center d-flex flex-direction-column justify-content-center flex-wrap align-items-center">
+                        <div class="message text-center blockquote w-100">"They’ve been consistent throughout the years and grown together with us. Even as they’ve grown, they haven’t lost sight of what they do. Most of their key resources are still with them, which is also a testament to their organization."</div>
+                        <div class="blockquote-footer w-100 text-white">Jim Joe, WebCorpCo</div>
+                    </div>
+                    </div>
+                    <div class="h5 font-weight-normal one-slide mx-auto">
+                    <div class="testimonial w-100 px-3 text-center  d-flex flex-direction-column justify-content-center flex-wrap align-items-center">
+                        <div class="message text-center blockquote w-100">"Miami Beach Visitor and Convention Authority uses Solodev to craft a website capable of representing its diverse residents. The website features a newsroom with the latest events, an interactive calendar, and a mobile app that puts the
+                        resources of VCA at a user’s fingertips."</div>
+                        <div class="blockquote-footer w-100 text-white">Jim Joe, WebCorpCo</div>
+                    </div>
+                    </div>
+                    <div class="h5 font-weight-normal one-slide mx-auto">
+                    <div class="testimonial w-100 px-3 text-center  d-flex flex-direction-column justify-content-center flex-wrap align-items-center">
+                        <div class="message text-center blockquote w-100">Solodev is a great company to partner with! We are extremely happy with the software, service, and support.</div>
+                        <div class="blockquote-footer w-100 text-white">Jim Joe, WebCorpCo</div>
+                    </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+            </div>
             </div>
         </section>
 
