--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation"href="#home">Home <span class="sr-only">(current)</span></a>
                 <a tabindex="2" class="nav-item nav-link" href="#about">About</a>
                 <a tabindex="3" class="nav-item nav-link" href="#services">Services</a>
-                <a tabindex="4" class="nav-item nav-link" href="#">Gallery</a>
+                <a tabindex="4" class="nav-item nav-link" href="#gallery">Gallery</a>
                 <a tabindex="5" class="nav-item nav-link" href="#testimonials">Testimonials</a>
                 <a tabindex="6" class="nav-item nav-link" href="#contact">Contact Us</a>
               </div>
@@ -59,7 +59,7 @@
         <!-- TO DO: make card images NOT responsive so that they are always in a ROW position even when in mobile?? -->
 
         <section id="about" class="container">
-            <h2 class="display-3 text-center mt-5 mb-5">A b o u t</h2>
+            <h2 class="display-3 text-center mt-5 mb-5 pt-6">A b o u t</h2>
             <div class="about-text text-center mb-5">
                 <p>Lorem ipsum dolor sit amet, sed ex affert tamquam omnesque, sed ut malorum signiferumque. 
                     Per no consul ridens albucius. Eam legere habemus an, vis iusto vocent ad. No omnes praesent 
@@ -77,7 +77,7 @@
         </section>
 
         <section id="services" class="container">
-            <h2 class="display-3 text-center mt-5 mb-5">S e r v i c e s</h2>
+            <h2 class="display-3 text-center mt-5 mb-5 pt-6">S e r v i c e s</h2>
             <div class="row text-center">
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
@@ -124,7 +124,7 @@
         </section>
 
         <section id="gallery" class="container">
-            <h2 class="display-3 text-center mt-5 mb-5">G a l l e r y</h2>
+            <h2 class="display-3 text-center mt-5 mb-5 pt-6">G a l l e r y</h2>
            <!-- <div class="row text-center">
                 <div class="instagram-post">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/By_JFRghVyD/" data-instgrm-version="12" 
@@ -205,7 +205,7 @@
         </section>
 
         <section class="container" id="testimonials">
-        <h2 class="display-3 text-center mt-5 mb-5">T e s t i m o n i a l s</h2>
+        <h2 class="display-3 text-center mt-5 mb-5 pt-6">T e s t i m o n i a l s</h2>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
