--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <blockquote>
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!"</p>
                     <small>Someone famous</small>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                 <blockquote>
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!"</p>
                     <small>Someone famous</small>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                 <blockquote>
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!"</p>
                     <small>Someone famous</small>
                     </div>
                 </div>
