--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 
         <section id="gallery" class="container">
             <h2 class="display-3 text-center mt-5 mb-5 pt-6">G a l l e r y</h2>
+            <div id="instafeed"></div>
+
+
            <!-- <div class="row text-center">
                 <div class="instagram-post">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/By_JFRghVyD/" data-instgrm-version="12" 
@@ -202,6 +205,7 @@
                 <script async src="//www.instagram.com/embed.js"></script>
                 </div>
             </div> -->
+
         </section>
 
         <section class="container" id="testimonials">
