--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <section id="gallery" class="container">
             <h2 class="display-3 text-center mt-5 mb-5 pt-6">G a l l e r y</h2>
             <div id="instafeed"></div>
+            <!-- <div id="instagram-feed-demo" class="instagram_feed"></div> -->
 
 
            <!-- <div class="row text-center">
@@ -282,6 +283,13 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+        <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="jquery.instagramFeed.js"></script> -->
+
+        <!-- <script type="text/javascript" src="path/to/instafeed.min.js"></script> -->
+        <script type="text/javascript" src="js/instafeed.min.js"></script>
+        
 
         <script type="text/javascript" src="script.js"></script>
     </body>
