--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <script src="jquery.instagramFeed.js"></script> -->
 
         <!-- <script type="text/javascript" src="path/to/instafeed.min.js"></script> -->
-        <script type="text/javascript" src="js/instafeed.min.js"></script>
+        <script type="text/javascript" src="instafeed.min.js"></script>
         
 
         <script type="text/javascript" src="script.js"></script>
