--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="nav-width collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation"href="#home">Home <span class="sr-only">(current)</span></a>
+                <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation" href="#home">Home <span class="sr-only">(current)</span></a>
                 <a tabindex="2" class="nav-item nav-link" href="#about">About</a>
                 <a tabindex="3" class="nav-item nav-link" href="#services">Services</a>
                 <a tabindex="4" class="nav-item nav-link" href="#gallery">Gallery</a>
@@ -125,6 +125,9 @@
 
         <section id="gallery" class="container">
             <h2 class="display-3 text-center mt-5 mb-5 pt-6">G a l l e r y</h2>
+            <div class="insta-link text-center">
+                <a tabindex="10" href="https://www.instagram.com/adeledecordesign/" target="_blank">Check us out on Instagram</a>
+            </div>
             <div id="instafeed"></div>
             <!-- <div id="instagram-feed-demo" class="instagram_feed"></div> -->
 
@@ -190,7 +193,7 @@
             <h2 class="display-4 pb-4 my-4">Contact Us Today</h2>
             <p class="lead pb-3">Send us a message and we will get back to 
             you as soon as possible.</p>
-            <a href="#" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
+            <a tabindex="11" href="#" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
         </section>
 
         <footer class="py-3 bg-white">
