made nab-item font size responsive depending on view-port width

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </head>
     <body>
         <nav role="banner" class="top-logo fixed-top">
-            <img id="logo-main" src="img/logo2.png" width="200" alt="adele decore and design logo img">
-          <div class="navbar navbar-expand-lg navbar-light bg-white">
+            <img id="logo-main" src="img/logo2.png" width="200" alt="business logo img">
+          <div class="navbar navbar-expand-sm navbar-light bg-white">
             <div class="nav-width collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation" href="#home">Home <span class="sr-only">(current)</span></a>
