added collapsable navbar button for mobile viewport

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <body>
         <nav role="banner" class="top-logo fixed-top">
             <img id="logo-main" src="img/logo2.png" width="200" alt="business logo img">
-          <div class="navbar navbar-expand-sm navbar-light bg-white">
+          <div class="navbar navbar-expand-md navbar-light bg-white">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" 
+                aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>    
             <div class="nav-width collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation" href="#home">Home <span class="sr-only">(current)</span></a>
