moved navbar button to center position

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <nav role="banner" class="top-logo fixed-top">
             <img id="logo-main" src="img/logo2.png" width="200" alt="business logo img">
-          <div class="navbar navbar-expand-md navbar-light bg-white">
+          <div class="navbar navbar-expand-md navbar-light bg-white justify-content-center">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" 
                 data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" 
                 aria-expanded="false" aria-label="Toggle navigation">
