--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         <h2 class="display-3 text-center mt-5 mb-5 pt-6">T e s t i m o n i a l s</h2>
         <div tabindex="11" id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" aria-hidden="false"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1" aria-hidden="true"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2" aria-hidden="true"></li>
             </ol>
             <div class="carousel-inner">
                 
@@ -184,11 +184,11 @@
             </div>
             
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="carousel-control-prev-icon" aria-hidden="true" aria-controls="carousel" aria-label="carousel buttons"></span>
                 <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="carousel-control-next-icon" aria-hidden="true" aria-controls="carousel" aria-label="carousel buttons"></span>
                 <span class="sr-only">Next</span>
             </a>
             </div>
