added background image to gallery to remove some of the white space

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <section id="gallery" class="container">
             <h2 class="display-3 text-center mt-5 mb-5 pt-6">G a l l e r y</h2>
             <div class="insta-link text-center">
-                <a tabindex="10" href="https://www.instagram.com/adeledecordesign/" target="_blank">Check us out on Instagram</a>
+                <a tabindex="10" href="https://www.instagram.com/adeledecordesign/" target="_blank">Follow us on Instagram</a>
             </div>
             <div id="instafeed"></div>
             <!-- <div id="instagram-feed-demo" class="instagram_feed"></div> -->
