--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>    
             <div class="nav-width collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
+              <div class="navbar-nav text-center">
                 <a tabindex="1" class="nav-item nav-link active" aria-label="Main navigation" role="navigation" href="#home">Home <span class="sr-only">(current)</span></a>
                 <a tabindex="2" class="nav-item nav-link" href="#about">About</a>
                 <a tabindex="3" class="nav-item nav-link" href="#services">Services</a>
