made logo image bigger and removed margin

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <nav role="banner" class="top-logo fixed-top">
-            <img id="logo-main" src="img/logo2.png" width="200" alt="business logo img">
+            <img id="logo-main" src="img/logo2.png" width="250" height="90" alt="business logo img">
           <div class="navbar navbar-expand-md navbar-light bg-white justify-content-center">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" 
                 data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" 
@@ -61,7 +61,6 @@
                </div>
             </div>
         </div>
-        <!-- TO DO: make card images NOT responsive so that they are always in a ROW position even when in mobile?? -->
 
         <section id="about" class="container">
             <h2 class="display-3 text-center mt-5 mb-5 pt-6">A b o u t</h2>
