--- a/index.html
+++ b/index.html
@@ -217,17 +217,16 @@
                 <h4>Table Decor</h4>
             </div>
             <div class="modal-body">
-                <p>We believe that the organization and management of financial information is a pivotal practice in ensuring the 
-                smooth operations of a business. Allow us to partner with you to unlock the most vital resource in your business, your time. 
-                We will provide a full range of services and continuously work to ensure that your financial records are accurate and reliable. 
-                Examples of the services we will provide include:</p>
-                <ul>
-                    <li>Transaction processing (Accounts payable and accounts receivable)</li>
-                    <li>Payroll and related compliance</li>
-                    <li>Tax payments (sales tax)</li>
+                <p>Lorem ipsum dolor sit amet, sed ex affert tamquam omnesque, sed ut malorum signiferumque. 
+                    Per no consul ridens albucius. Eam legere habemus an, vis iusto vocent ad. No omnes praesent 
+                    ullamcorper vix, legere facete senserit sea ad. Mea bonorum deserunt at, vim quidam dignissim no.</p>
+                <ul class="modal-list text-left">
+                    <li>decor-item</li>
+                    <li>decor-item</li>
+                    <li>decor-item</li>
                 </ul>
-                <p><span>Pricing:</span> Starts at $1,500 per month and up depending on the size or complexity of your business.</p>
-                <p>&ast;Price will be capped at $3,000 per month</p>
+                </br>
+                <p>Inquire for more information.</p>
             </div>
             <div class="modal-footer">
                 <span class="closeOne">Go Back</span>
@@ -245,12 +244,9 @@
                 <h4>Floral Arrangement</h4>
             </div>
             <div class="modal-body">
-                <p>With the rapidly changing business environment there is a greater need for timely, accurate and easily digestible information to 
-                    enhance decision-making and keep a pulse on your organization. We will bring your organizational and financial data to life via 
-                    online reports and tools that you can access 24/7 to help give you greater insight into your business and enable you to keep a 
-                    pulse on the things that you deem to be important in running your business.</p>
-                <p><span>Pricing:</span> Flat $1,000 per month</p>
-                <p>&ast;20% discount for 12 month subscription</p>
+                <p>Lorem ipsum dolor sit amet, sed ex affert tamquam omnesque, sed ut malorum signiferumque. 
+                    Per no consul ridens albucius. Eam legere habemus an, vis iusto vocent ad. No omnes praesent 
+                    ullamcorper vix, legere facete senserit sea ad. Mea bonorum deserunt at, vim quidam dignissim no.</p>
             </div>
             <div class="modal-footer">
                 <span class="closeTwo">Go Back</span>
@@ -268,11 +264,9 @@
                     <h4>Table Decor</h4>
                 </div>
                 <div class="modal-body">
-                    <p><span>Prerequisite:</span> Use of Business Intelligence Reporting solution.</p>
-                    <p>To generate the full potential of your organizational and financial data we will leverage your business intelligence reporting and offer weekly summaries and insights included in the reports. 
-                        In addition, you will have a dedicated analyst continuously monitoring your various trends and working to enhance your reporting insights.</p>
-                    <p><span>Pricing:</span> Flat $500 per month (First month FREE)</p>
-                    <p>&ast;sign up for a 12 month subscription and get the first three months FREE!</p>
+                    <p>Lorem ipsum dolor sit amet, sed ex affert tamquam omnesque, sed ut malorum signiferumque. 
+                        Per no consul ridens albucius. Eam legere habemus an, vis iusto vocent ad. No omnes praesent 
+                        ullamcorper vix, legere facete senserit sea ad. Mea bonorum deserunt at, vim quidam dignissim no.</p>
                 </div>
                 <div class="modal-footer">
                     <span class="closeThree">Go Back</span>
