removed padding from jumbotron and instead added top padding to body in order to move all elemenets down for navbar to not overlap text

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <!-- Modal content -->
         <div class="modal-content">
             <div class="modal-header">
-                <h4>Floral Arrangement</h4>
+                <h4>Floral Arrangements</h4>
             </div>
             <div class="modal-body">
                 <p>Lorem ipsum dolor sit amet, sed ex affert tamquam omnesque, sed ut malorum signiferumque. 
