--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <p>Inquire for more information.</p>
             </div>
             <div class="modal-footer">
-                <span type="button" class="closeOne">Go Back</span>
+                <span type="button" class="modal-btn closeOne">Go Back</span>
             </div>
         </div>
         
@@ -269,7 +269,7 @@
                         ullamcorper vix, legere facete senserit sea ad. Mea bonorum deserunt at, vim quidam dignissim no.</p>
                 </div>
                 <div class="modal-footer">
-                    <span type="button" class="closeThree">Go Back</span>
+                    <span type="button" class="modal-btn closeThree">Go Back</span>
                 </div>
             </div>
         
