cleaned up css file

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="card h-100">
                       <img class="card-img-top" src="img/table-decor.jpg" alt="table with flowers">
                         <div class="card-body">
-                          <h4 class="card-title" id="accounting-title">Table Decor</h4>
+                          <h4 class="card-title">Table Decor</h4>
                             <p class="card-text">Take a look at our extensive list of available items that will allow you to 
                             style each table with an elegant and timeless decor. </p>
                         </div>
