removed uncessary image and changed all button colors to nutral color

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <nav role="banner" class="top-logo fixed-top">
-            <img id="logo-main" src="img/logo2.png" width="250" height="90" alt="business logo img">
+            <img id="logo-main" src="img/logo.png" width="250" height="90" alt="business logo img">
           <div class="navbar navbar-expand-md navbar-light bg-white justify-content-center">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" 
                 data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" 
@@ -87,9 +87,9 @@
                     <div class="card h-100">
                       <img class="card-img-top" src="img/table-decor.jpg" alt="table with flowers">
                         <div class="card-body">
-                          <h4 class="card-title">Table Decor</h4>
-                            <p class="card-text">Take a look at our extensive list of available items that will allow you to 
-                            style each table with an elegant and timeless decor. </p>
+                          <h4 class="card-title">Staging</h4>
+                            <p class="card-text">We offer a variety of quality decorative items to compliment your backdrop 
+                                    and enhance the ambiance of your special day.</p>
                         </div>
                         <div class="card-footer py-4">
                           <a tabindex="7" role="button" href="#" class="btn btn-outline-success" id="firstBtn">Learn More</a>
@@ -115,9 +115,9 @@
                     <div class="card h-100">
                       <img class="card-img-top" src="img/props.jpg" alt="wedding ring inside box">
                         <div class="card-body">
-                          <h4 class="card-title">Decorations</h4>
-                          <p class="card-text">We offer a variety of quality decorative items to compliment your backdrop 
-                            and enhance the ambiance of your special day. </p>
+                          <h4 class="card-title">Table Centerpieces</h4>
+                          <p class="card-text">Take a look at our extensive list of available items that will allow you to 
+                                style each table with an elegant and timeless decor.</p>
                         </div>
                         <div class="card-footer py-4">
                           <a tabindex="9" role="button" href="#" class="btn btn-outline-success" id="thirdBtn">Learn More</a>
@@ -202,7 +202,7 @@
 
         <footer class="py-3 bg-white">
             <div class="container">
-                <p class="text-center">Copyright &copy; Adele Decore &amp; Design, LCC</p>
+                <p class="text-center">Copyright &copy; Adele Decor &amp; Design, LCC</p>
             </div>
         </footer>
 
